--- a/Debris project with models/requirements.txt
+++ b/Debris project with models/requirements.txt
@@ -1,11 +1,7 @@
 
+joblib==1.4.2
+numpy==2.2.2
+opencv_python==4.11.0.86
+Pillow==11.1.0
 streamlit==1.41.1
-ultralytics
-numpy==1.24.0
-pandas==1.5.3
-scikit-learn==1.2.2
-opencv-python-headless==4.7.0.72
-torch==2.0.1
-torchvision==0.15.2
-joblib
-pillow
+ultralytics==8.3.65
