--- a/requirements.txt
+++ b/requirements.txt
@@ -46,7 +46,7 @@ nbconvert==7.16.5
 nbformat==5.10.4
 networkx==3.4.2
 numpy==2.2.1
-opencv-python==4.11.0.86
+opencv-python-headless
 packaging==24.2
 pandas==2.2.3
 pandocfilters==1.5.1
